<resources>
    <string name="app_name">E-CommerceShoppingAndroidApp</string>
    <string name="face">Face</string>
    <string name="skin">Skin</string>
    <string name="body">Body</string>
    <string name="todo">TODO</string>
    <string name="hair">Hair</string>
    <string name="hello_emma">Hello, Emma!</string>
    <string name="let_s_find">Let\'s find your favourate body care product</string>
    <string name="most_popular">Most Popular</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="_250_ml">250 ml</string>
    <string name="_15_00">$ 15.00</string>
    <string name="japanese_cherry_blossom">Japanese Cherry Blossom</string>
    <string name="your_cart_is_empty">Your Cart is empty</string>
</resources>